syntax = "proto3";

package kademlia;

import "google/protobuf/empty.proto";

service KademliaService {
  rpc Ping (PingRequest) returns (PongResponse);
  rpc Store (StoreRequest) returns (StoreResponse);
  rpc FindNode (FindNodeRequest) returns (FindNodeResponse);
  rpc FindValue (FindValueRequest) returns (FindValueResponse);
}

message PingRequest {
  bytes node_id = 1;
}

message PongResponse {
  bytes node_id = 1;
}

message StoreRequest {
  bytes key = 1;
  bytes value = 2;
}

message StoreResponse {
  bytes key = 1;
}

message FindNodeRequest {
  bytes key = 1;
  bytes count = 2;
}

message NodeInfo {
  bytes id = 1;
  string addr = 2;
  uint64 port = 3;
  bytes pub_key = 4;
}

message FindNodeResponse {
  repeated NodeInfo nodes = 1;
}

message FindValueRequest {
  bytes key = 1;
}

message RepetedNode {
  repeated NodeInfo nodes = 1;
}

message FindValueResponse {
  oneof resp {
    bytes value = 1;
    RepetedNode nodes = 2;
  }
}
